# Knowledge-Distillation-X-Lightning

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.cfg
configs/: conf.yaml
configs/lightning_module/: knowledge_distillation.yaml  student_model.yaml  teacher_model.yaml
src/: config.py  constants.py  datamodule.py  dataset.py  knowledge_distillation_loss.py  knowledge_distillation_module.py  lightning_module.py  metrics.py  optimizer.py  student_model.py  teacher_loader.py  train.py  transforms.py
src/callbacks/: confusion_matrix_callback.py  debug.py
